// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletListItem should avoid click on TableRow when syncing 1`] = `[Function]`;

exports[`WalletListItem should render when isCompact = false 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 ijbCHm group"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 kjAxRM space-x-4"
          >
            <div
              class="flex items-center justify-center"
              data-testid="WalletIcon__Starred"
            >
              <div
                class="sc-bdvvtL jjGTFI text-theme-warning-400"
                height="18"
                width="18"
              >
                <svg>
                  star-filled.svg
                </svg>
              </div>
            </div>
            <div
              class="flex-shrink-0 flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 pl-4 ml-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-18vw8a4-0 QrTVC ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="flex-1 inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold justify-end"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          data-testid="CurrencyCell"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-end text-theme-secondary-text"
          >
            N/A
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 cxSvRM justify-end text-theme-secondary-text"
          >
            <div
              data-testid="WalletHeader__send-button"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk my-auto"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk w-11 flex-1 text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render when isCompact = true 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 ijbCHm group"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 eNekfl space-x-3"
          >
            <div
              class="flex items-center justify-center"
              data-testid="WalletIcon__Starred"
            >
              <div
                class="sc-bdvvtL jjGTFI text-theme-warning-400"
                height="18"
                width="18"
              >
                <svg>
                  star-filled.svg
                </svg>
              </div>
            </div>
            <div
              class="flex-shrink-0 flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 pl-3 ml-3"
            >
              <div
                class="Avatar__AvatarWrapper-sc-18vw8a4-0 itzeiy ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="flex-1 inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold justify-end"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          data-testid="CurrencyCell"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-end text-theme-secondary-text"
          >
            N/A
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 bfFMyp justify-end text-theme-secondary-text"
          >
            <div
              data-testid="WalletHeader__send-button"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF text-theme-primary-600 hover:text-theme-primary-700"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class=""
              data-testid="WalletHeader__more-button"
            >
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 enzTPF w-11 -mr-1.5 text-theme-primary-300 hover:text-theme-primary-600"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render with a N/A for fiat 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 ijbCHm group"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 kjAxRM space-x-4"
          >
            <div
              class="flex items-center justify-center"
              data-testid="WalletIcon__Starred"
            >
              <div
                class="sc-bdvvtL jjGTFI text-theme-warning-400"
                height="18"
                width="18"
              >
                <svg>
                  star-filled.svg
                </svg>
              </div>
            </div>
            <div
              class="flex-shrink-0 flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 pl-4 ml-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-18vw8a4-0 QrTVC ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="flex-1 inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold justify-end"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          data-testid="CurrencyCell"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-end text-theme-secondary-text"
          >
            N/A
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 cxSvRM justify-end text-theme-secondary-text"
          >
            <div
              data-testid="WalletHeader__send-button"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk my-auto"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk w-11 flex-1 text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`WalletListItem should render with default BTC as default exchangeCurrency 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 ijbCHm group"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 kjAxRM space-x-4"
          >
            <div
              class="flex items-center justify-center"
              data-testid="WalletIcon__Starred"
            >
              <div
                class="sc-bdvvtL jjGTFI text-theme-warning-400"
                height="18"
                width="18"
              >
                <svg>
                  star-filled.svg
                </svg>
              </div>
            </div>
            <div
              class="flex-shrink-0 flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 pl-4 ml-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-18vw8a4-0 QrTVC ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1"
            >
              <div
                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="flex-1 inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="sc-bdvvtL qGXhc"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold justify-end"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          data-testid="CurrencyCell"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-end text-theme-secondary-text"
          >
            N/A
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 cxSvRM justify-end text-theme-secondary-text"
          >
            <div
              data-testid="WalletHeader__send-button"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk my-auto"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <div
                class="relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk w-11 flex-1 text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="sc-bdvvtL qGXhc"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
